hw3_Jeremy_Mill/grammar.output
Terminals unused in grammar

   TEQ
   NEQ
   LEQ
   GEQ
   TAND
   TOR


Grammar

    0 $accept: Top $end

    1 Top: ClassList

    2 ClassList: ClassList classDecl
    3          | classDecl

    4 classDecl: TCLASS TID '{' declList '}' ';'
    5          | TCLASS TID '{' '}' ';'
    6          | TCLASS TID TEXTENDS TID '{' declList '}' ';'
    7          | TCLASS TID TEXTENDS TID '{' '}' ';'

    8 declList: decl
    9         | declList decl

   10 decl: type TID
   11     | type TID '(' ')' ';'
   12     | type TID '(' formals ')' '{' '}'
   13     | type TID '(' formals ')' '{' statementList '}'
   14     | TID '(' ')' '{' '}'
   15     | TID '(' formals ')' '{' statementList '}'

   16 statementList: statement
   17              | statementList statement

   18 formals: formal
   19        | formals formal

   20 statement: expr ';'
   21          | type TID ';'
   22          | lvalue '=' expr ';'
   23          | '{' statementList '}'
   24          | '{' '}'
   25          | TWHILE '(' expr ')' statement
   26          | TIF '(' expr ')'
   27          | TIF '(' expr ')' TELSE statement
   28          | TRETURN expr ';'
   29          | ';'

   30 formal: type TID

   31 type: TINT
   32     | TBOOL
   33     | TVOID
   34     | TID
   35     | TINT TDB
   36     | TBOOL TDB
   37     | TVOID TDB
   38     | TID TDB

   39 expr: expr '/' expr
   40     | expr '*' expr
   41     | expr '-' expr
   42     | expr '+' expr
   43     | expr '>' expr
   44     | expr '<' expr
   45     | expr "<=" expr
   46     | expr ">=" expr
   47     | expr "!=" expr
   48     | expr "==" expr
   49     | expr "||" expr
   50     | expr "&&" expr
   51     | uop expr
   52     | NUMBER
   53     | TRUE
   54     | FALSE
   55     | '(' expr ')'
   56     | lvalue
   57     | TNEW TID '(' ')'
   58     | TNEW TID '(' actuals ')'
   59     | TNEW type '[' expr ']'

   60 uop: '!'
   61    | '-'

   62 lvalue: TID
   63       | TID '(' ')'
   64       | TID '(' actuals ')'
   65       | lvalue '[' expr ']'
   66       | lvalue '.' TID
   67       | lvalue '.' TID '(' ')'
   68       | lvalue '.' TID '(' actuals ')'
   69       | THIS

   70 actuals: expr
   71        | actuals ',' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'(' (40) 11 12 13 14 15 25 26 27 55 57 58 63 64 67 68
')' (41) 11 12 13 14 15 25 26 27 55 57 58 63 64 67 68
'*' (42) 40
'+' (43) 42
',' (44) 71
'-' (45) 41 61
'.' (46) 66 67 68
'/' (47) 39
';' (59) 4 5 6 7 11 20 21 22 28 29
'<' (60) 44
'=' (61) 22
'>' (62) 43
'[' (91) 59 65
']' (93) 59 65
'{' (123) 4 5 6 7 12 13 14 15 23 24
'}' (125) 4 5 6 7 12 13 14 15 23 24
error (256)
NUMBER (258) 52
TRUE (259) 53
FALSE (260) 54
TID (261) 4 5 6 7 10 11 12 13 14 15 21 30 34 38 57 58 62 63 64 66 67
    68
THIS (262) 69
TIF (263) 26 27
TELSE (264) 27
TEQ (265)
NEQ (266)
LEQ (267)
GEQ (268)
TAND (269)
TOR (270)
TNEW (271) 57 58 59
TINT (272) 31 35
TBOOL (273) 32 36
TVOID (274) 33 37
TDB (275) 35 36 37 38
TRETURN (276) 28
TWHILE (277) 25
TCLASS (278) 4 5 6 7
TEXTENDS (279) 6 7
"||" (280) 49
"&&" (281) 50
"==" (282) 48
"!=" (283) 47
">=" (284) 46
"<=" (285) 45
UMINUS (286)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Top (50)
    on left: 1, on right: 0
ClassList (51)
    on left: 2 3, on right: 1 2
classDecl (52)
    on left: 4 5 6 7, on right: 2 3
declList (53)
    on left: 8 9, on right: 4 6 9
decl (54)
    on left: 10 11 12 13 14 15, on right: 8 9
statementList (55)
    on left: 16 17, on right: 13 15 17 23
formals (56)
    on left: 18 19, on right: 12 13 15 19
statement (57)
    on left: 20 21 22 23 24 25 26 27 28 29, on right: 16 17 25 27
formal (58)
    on left: 30, on right: 18 19
type (59)
    on left: 31 32 33 34 35 36 37 38, on right: 10 11 12 13 21 30 59
expr (60)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59, on right: 20 22 25 26 27 28 39 40 41 42 43 44 45 46 47
    48 49 50 51 55 59 65 70 71
uop (61)
    on left: 60 61, on right: 51
lvalue (62)
    on left: 62 63 64 65 66 67 68 69, on right: 22 56 65 66 67 68
actuals (63)
    on left: 70 71, on right: 58 64 68 71


State 0

    0 $accept: . Top $end

    TCLASS  shift, and go to state 1

    Top        go to state 2
    ClassList  go to state 3
    classDecl  go to state 4


State 1

    4 classDecl: TCLASS . TID '{' declList '}' ';'
    5          | TCLASS . TID '{' '}' ';'
    6          | TCLASS . TID TEXTENDS TID '{' declList '}' ';'
    7          | TCLASS . TID TEXTENDS TID '{' '}' ';'

    TID  shift, and go to state 5


State 2

    0 $accept: Top . $end

    $end  shift, and go to state 6


State 3

    1 Top: ClassList .
    2 ClassList: ClassList . classDecl

    TCLASS  shift, and go to state 1

    $default  reduce using rule 1 (Top)

    classDecl  go to state 7


State 4

    3 ClassList: classDecl .

    $default  reduce using rule 3 (ClassList)


State 5

    4 classDecl: TCLASS TID . '{' declList '}' ';'
    5          | TCLASS TID . '{' '}' ';'
    6          | TCLASS TID . TEXTENDS TID '{' declList '}' ';'
    7          | TCLASS TID . TEXTENDS TID '{' '}' ';'

    TEXTENDS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: Top $end .

    $default  accept


State 7

    2 ClassList: ClassList classDecl .

    $default  reduce using rule 2 (ClassList)


State 8

    6 classDecl: TCLASS TID TEXTENDS . TID '{' declList '}' ';'
    7          | TCLASS TID TEXTENDS . TID '{' '}' ';'

    TID  shift, and go to state 10


State 9

    4 classDecl: TCLASS TID '{' . declList '}' ';'
    5          | TCLASS TID '{' . '}' ';'

    TID    shift, and go to state 11
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    '}'    shift, and go to state 15

    declList  go to state 16
    decl      go to state 17
    type      go to state 18


State 10

    6 classDecl: TCLASS TID TEXTENDS TID . '{' declList '}' ';'
    7          | TCLASS TID TEXTENDS TID . '{' '}' ';'

    '{'  shift, and go to state 19


State 11

   14 decl: TID . '(' ')' '{' '}'
   15     | TID . '(' formals ')' '{' statementList '}'
   34 type: TID .
   38     | TID . TDB

    TDB  shift, and go to state 20
    '('  shift, and go to state 21

    $default  reduce using rule 34 (type)


State 12

   31 type: TINT .
   35     | TINT . TDB

    TDB  shift, and go to state 22

    $default  reduce using rule 31 (type)


State 13

   32 type: TBOOL .
   36     | TBOOL . TDB

    TDB  shift, and go to state 23

    $default  reduce using rule 32 (type)


State 14

   33 type: TVOID .
   37     | TVOID . TDB

    TDB  shift, and go to state 24

    $default  reduce using rule 33 (type)


State 15

    5 classDecl: TCLASS TID '{' '}' . ';'

    ';'  shift, and go to state 25


State 16

    4 classDecl: TCLASS TID '{' declList . '}' ';'
    9 declList: declList . decl

    TID    shift, and go to state 11
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    '}'    shift, and go to state 26

    decl  go to state 27
    type  go to state 18


State 17

    8 declList: decl .

    $default  reduce using rule 8 (declList)


State 18

   10 decl: type . TID
   11     | type . TID '(' ')' ';'
   12     | type . TID '(' formals ')' '{' '}'
   13     | type . TID '(' formals ')' '{' statementList '}'

    TID  shift, and go to state 28


State 19

    6 classDecl: TCLASS TID TEXTENDS TID '{' . declList '}' ';'
    7          | TCLASS TID TEXTENDS TID '{' . '}' ';'

    TID    shift, and go to state 11
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    '}'    shift, and go to state 29

    declList  go to state 30
    decl      go to state 17
    type      go to state 18


State 20

   38 type: TID TDB .

    $default  reduce using rule 38 (type)


State 21

   14 decl: TID '(' . ')' '{' '}'
   15     | TID '(' . formals ')' '{' statementList '}'

    TID    shift, and go to state 31
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    ')'    shift, and go to state 32

    formals  go to state 33
    formal   go to state 34
    type     go to state 35


State 22

   35 type: TINT TDB .

    $default  reduce using rule 35 (type)


State 23

   36 type: TBOOL TDB .

    $default  reduce using rule 36 (type)


State 24

   37 type: TVOID TDB .

    $default  reduce using rule 37 (type)


State 25

    5 classDecl: TCLASS TID '{' '}' ';' .

    $default  reduce using rule 5 (classDecl)


State 26

    4 classDecl: TCLASS TID '{' declList '}' . ';'

    ';'  shift, and go to state 36


State 27

    9 declList: declList decl .

    $default  reduce using rule 9 (declList)


State 28

   10 decl: type TID .
   11     | type TID . '(' ')' ';'
   12     | type TID . '(' formals ')' '{' '}'
   13     | type TID . '(' formals ')' '{' statementList '}'

    '('  shift, and go to state 37

    $default  reduce using rule 10 (decl)


State 29

    7 classDecl: TCLASS TID TEXTENDS TID '{' '}' . ';'

    ';'  shift, and go to state 38


State 30

    6 classDecl: TCLASS TID TEXTENDS TID '{' declList . '}' ';'
    9 declList: declList . decl

    TID    shift, and go to state 11
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    '}'    shift, and go to state 39

    decl  go to state 27
    type  go to state 18


State 31

   34 type: TID .
   38     | TID . TDB

    TDB  shift, and go to state 20

    $default  reduce using rule 34 (type)


State 32

   14 decl: TID '(' ')' . '{' '}'

    '{'  shift, and go to state 40


State 33

   15 decl: TID '(' formals . ')' '{' statementList '}'
   19 formals: formals . formal

    TID    shift, and go to state 31
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    ')'    shift, and go to state 41

    formal  go to state 42
    type    go to state 35


State 34

   18 formals: formal .

    $default  reduce using rule 18 (formals)


State 35

   30 formal: type . TID

    TID  shift, and go to state 43


State 36

    4 classDecl: TCLASS TID '{' declList '}' ';' .

    $default  reduce using rule 4 (classDecl)


State 37

   11 decl: type TID '(' . ')' ';'
   12     | type TID '(' . formals ')' '{' '}'
   13     | type TID '(' . formals ')' '{' statementList '}'

    TID    shift, and go to state 31
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    ')'    shift, and go to state 44

    formals  go to state 45
    formal   go to state 34
    type     go to state 35


State 38

    7 classDecl: TCLASS TID TEXTENDS TID '{' '}' ';' .

    $default  reduce using rule 7 (classDecl)


State 39

    6 classDecl: TCLASS TID TEXTENDS TID '{' declList '}' . ';'

    ';'  shift, and go to state 46


State 40

   14 decl: TID '(' ')' '{' . '}'

    '}'  shift, and go to state 47


State 41

   15 decl: TID '(' formals ')' . '{' statementList '}'

    '{'  shift, and go to state 48


State 42

   19 formals: formals formal .

    $default  reduce using rule 19 (formals)


State 43

   30 formal: type TID .

    $default  reduce using rule 30 (formal)


State 44

   11 decl: type TID '(' ')' . ';'

    ';'  shift, and go to state 49


State 45

   12 decl: type TID '(' formals . ')' '{' '}'
   13     | type TID '(' formals . ')' '{' statementList '}'
   19 formals: formals . formal

    TID    shift, and go to state 31
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14
    ')'    shift, and go to state 50

    formal  go to state 42
    type    go to state 35


State 46

    6 classDecl: TCLASS TID TEXTENDS TID '{' declList '}' ';' .

    $default  reduce using rule 6 (classDecl)


State 47

   14 decl: TID '(' ')' '{' '}' .

    $default  reduce using rule 14 (decl)


State 48

   15 decl: TID '(' formals ')' '{' . statementList '}'

    NUMBER   shift, and go to state 51
    TRUE     shift, and go to state 52
    FALSE    shift, and go to state 53
    TID      shift, and go to state 54
    THIS     shift, and go to state 55
    TIF      shift, and go to state 56
    TNEW     shift, and go to state 57
    TINT     shift, and go to state 12
    TBOOL    shift, and go to state 13
    TVOID    shift, and go to state 14
    TRETURN  shift, and go to state 58
    TWHILE   shift, and go to state 59
    '-'      shift, and go to state 60
    '!'      shift, and go to state 61
    '{'      shift, and go to state 62
    ';'      shift, and go to state 63
    '('      shift, and go to state 64

    statementList  go to state 65
    statement      go to state 66
    type           go to state 67
    expr           go to state 68
    uop            go to state 69
    lvalue         go to state 70


State 49

   11 decl: type TID '(' ')' ';' .

    $default  reduce using rule 11 (decl)


State 50

   12 decl: type TID '(' formals ')' . '{' '}'
   13     | type TID '(' formals ')' . '{' statementList '}'

    '{'  shift, and go to state 71


State 51

   52 expr: NUMBER .

    $default  reduce using rule 52 (expr)


State 52

   53 expr: TRUE .

    $default  reduce using rule 53 (expr)


State 53

   54 expr: FALSE .

    $default  reduce using rule 54 (expr)


State 54

   34 type: TID .
   38     | TID . TDB
   62 lvalue: TID .
   63       | TID . '(' ')'
   64       | TID . '(' actuals ')'

    TDB  shift, and go to state 20
    '('  shift, and go to state 72

    TID       reduce using rule 34 (type)
    $default  reduce using rule 62 (lvalue)


State 55

   69 lvalue: THIS .

    $default  reduce using rule 69 (lvalue)


State 56

   26 statement: TIF . '(' expr ')'
   27          | TIF . '(' expr ')' TELSE statement

    '('  shift, and go to state 73


State 57

   57 expr: TNEW . TID '(' ')'
   58     | TNEW . TID '(' actuals ')'
   59     | TNEW . type '[' expr ']'

    TID    shift, and go to state 74
    TINT   shift, and go to state 12
    TBOOL  shift, and go to state 13
    TVOID  shift, and go to state 14

    type  go to state 75


State 58

   28 statement: TRETURN . expr ';'

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 77
    uop     go to state 69
    lvalue  go to state 78


State 59

   25 statement: TWHILE . '(' expr ')' statement

    '('  shift, and go to state 79


State 60

   61 uop: '-' .

    $default  reduce using rule 61 (uop)


State 61

   60 uop: '!' .

    $default  reduce using rule 60 (uop)


State 62

   23 statement: '{' . statementList '}'
   24          | '{' . '}'

    NUMBER   shift, and go to state 51
    TRUE     shift, and go to state 52
    FALSE    shift, and go to state 53
    TID      shift, and go to state 54
    THIS     shift, and go to state 55
    TIF      shift, and go to state 56
    TNEW     shift, and go to state 57
    TINT     shift, and go to state 12
    TBOOL    shift, and go to state 13
    TVOID    shift, and go to state 14
    TRETURN  shift, and go to state 58
    TWHILE   shift, and go to state 59
    '-'      shift, and go to state 60
    '!'      shift, and go to state 61
    '{'      shift, and go to state 62
    '}'      shift, and go to state 80
    ';'      shift, and go to state 63
    '('      shift, and go to state 64

    statementList  go to state 81
    statement      go to state 66
    type           go to state 67
    expr           go to state 68
    uop            go to state 69
    lvalue         go to state 70


State 63

   29 statement: ';' .

    $default  reduce using rule 29 (statement)


State 64

   55 expr: '(' . expr ')'

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 82
    uop     go to state 69
    lvalue  go to state 78


State 65

   15 decl: TID '(' formals ')' '{' statementList . '}'
   17 statementList: statementList . statement

    NUMBER   shift, and go to state 51
    TRUE     shift, and go to state 52
    FALSE    shift, and go to state 53
    TID      shift, and go to state 54
    THIS     shift, and go to state 55
    TIF      shift, and go to state 56
    TNEW     shift, and go to state 57
    TINT     shift, and go to state 12
    TBOOL    shift, and go to state 13
    TVOID    shift, and go to state 14
    TRETURN  shift, and go to state 58
    TWHILE   shift, and go to state 59
    '-'      shift, and go to state 60
    '!'      shift, and go to state 61
    '{'      shift, and go to state 62
    '}'      shift, and go to state 83
    ';'      shift, and go to state 63
    '('      shift, and go to state 64

    statement  go to state 84
    type       go to state 67
    expr       go to state 68
    uop        go to state 69
    lvalue     go to state 70


State 66

   16 statementList: statement .

    $default  reduce using rule 16 (statementList)


State 67

   21 statement: type . TID ';'

    TID  shift, and go to state 85


State 68

   20 statement: expr . ';'
   39 expr: expr . '/' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '+' expr
   43     | expr . '>' expr
   44     | expr . '<' expr
   45     | expr . "<=" expr
   46     | expr . ">=" expr
   47     | expr . "!=" expr
   48     | expr . "==" expr
   49     | expr . "||" expr
   50     | expr . "&&" expr

    "||"  shift, and go to state 86
    "&&"  shift, and go to state 87
    "=="  shift, and go to state 88
    "!="  shift, and go to state 89
    '<'   shift, and go to state 90
    '>'   shift, and go to state 91
    ">="  shift, and go to state 92
    "<="  shift, and go to state 93
    '+'   shift, and go to state 94
    '-'   shift, and go to state 95
    '*'   shift, and go to state 96
    '/'   shift, and go to state 97
    ';'   shift, and go to state 98


State 69

   51 expr: uop . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 99
    uop     go to state 69
    lvalue  go to state 78


State 70

   22 statement: lvalue . '=' expr ';'
   56 expr: lvalue .
   65 lvalue: lvalue . '[' expr ']'
   66       | lvalue . '.' TID
   67       | lvalue . '.' TID '(' ')'
   68       | lvalue . '.' TID '(' actuals ')'

    '='  shift, and go to state 100
    '['  shift, and go to state 101
    '.'  shift, and go to state 102

    $default  reduce using rule 56 (expr)


State 71

   12 decl: type TID '(' formals ')' '{' . '}'
   13     | type TID '(' formals ')' '{' . statementList '}'

    NUMBER   shift, and go to state 51
    TRUE     shift, and go to state 52
    FALSE    shift, and go to state 53
    TID      shift, and go to state 54
    THIS     shift, and go to state 55
    TIF      shift, and go to state 56
    TNEW     shift, and go to state 57
    TINT     shift, and go to state 12
    TBOOL    shift, and go to state 13
    TVOID    shift, and go to state 14
    TRETURN  shift, and go to state 58
    TWHILE   shift, and go to state 59
    '-'      shift, and go to state 60
    '!'      shift, and go to state 61
    '{'      shift, and go to state 62
    '}'      shift, and go to state 103
    ';'      shift, and go to state 63
    '('      shift, and go to state 64

    statementList  go to state 104
    statement      go to state 66
    type           go to state 67
    expr           go to state 68
    uop            go to state 69
    lvalue         go to state 70


State 72

   63 lvalue: TID '(' . ')'
   64       | TID '(' . actuals ')'

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64
    ')'     shift, and go to state 105

    expr     go to state 106
    uop      go to state 69
    lvalue   go to state 78
    actuals  go to state 107


State 73

   26 statement: TIF '(' . expr ')'
   27          | TIF '(' . expr ')' TELSE statement

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 108
    uop     go to state 69
    lvalue  go to state 78


State 74

   34 type: TID .
   38     | TID . TDB
   57 expr: TNEW TID . '(' ')'
   58     | TNEW TID . '(' actuals ')'

    TDB  shift, and go to state 20
    '('  shift, and go to state 109

    $default  reduce using rule 34 (type)


State 75

   59 expr: TNEW type . '[' expr ']'

    '['  shift, and go to state 110


State 76

   62 lvalue: TID .
   63       | TID . '(' ')'
   64       | TID . '(' actuals ')'

    '('  shift, and go to state 72

    $default  reduce using rule 62 (lvalue)


State 77

   28 statement: TRETURN expr . ';'
   39 expr: expr . '/' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '+' expr
   43     | expr . '>' expr
   44     | expr . '<' expr
   45     | expr . "<=" expr
   46     | expr . ">=" expr
   47     | expr . "!=" expr
   48     | expr . "==" expr
   49     | expr . "||" expr
   50     | expr . "&&" expr

    "||"  shift, and go to state 86
    "&&"  shift, and go to state 87
    "=="  shift, and go to state 88
    "!="  shift, and go to state 89
    '<'   shift, and go to state 90
    '>'   shift, and go to state 91
    ">="  shift, and go to state 92
    "<="  shift, and go to state 93
    '+'   shift, and go to state 94
    '-'   shift, and go to state 95
    '*'   shift, and go to state 96
    '/'   shift, and go to state 97
    ';'   shift, and go to state 111


State 78

   56 expr: lvalue .
   65 lvalue: lvalue . '[' expr ']'
   66       | lvalue . '.' TID
   67       | lvalue . '.' TID '(' ')'
   68       | lvalue . '.' TID '(' actuals ')'

    '['  shift, and go to state 101
    '.'  shift, and go to state 102

    $default  reduce using rule 56 (expr)


State 79

   25 statement: TWHILE '(' . expr ')' statement

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 112
    uop     go to state 69
    lvalue  go to state 78


State 80

   24 statement: '{' '}' .

    $default  reduce using rule 24 (statement)


State 81

   17 statementList: statementList . statement
   23 statement: '{' statementList . '}'

    NUMBER   shift, and go to state 51
    TRUE     shift, and go to state 52
    FALSE    shift, and go to state 53
    TID      shift, and go to state 54
    THIS     shift, and go to state 55
    TIF      shift, and go to state 56
    TNEW     shift, and go to state 57
    TINT     shift, and go to state 12
    TBOOL    shift, and go to state 13
    TVOID    shift, and go to state 14
    TRETURN  shift, and go to state 58
    TWHILE   shift, and go to state 59
    '-'      shift, and go to state 60
    '!'      shift, and go to state 61
    '{'      shift, and go to state 62
    '}'      shift, and go to state 113
    ';'      shift, and go to state 63
    '('      shift, and go to state 64

    statement  go to state 84
    type       go to state 67
    expr       go to state 68
    uop        go to state 69
    lvalue     go to state 70


State 82

   39 expr: expr . '/' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '+' expr
   43     | expr . '>' expr
   44     | expr . '<' expr
   45     | expr . "<=" expr
   46     | expr . ">=" expr
   47     | expr . "!=" expr
   48     | expr . "==" expr
   49     | expr . "||" expr
   50     | expr . "&&" expr
   55     | '(' expr . ')'

    "||"  shift, and go to state 86
    "&&"  shift, and go to state 87
    "=="  shift, and go to state 88
    "!="  shift, and go to state 89
    '<'   shift, and go to state 90
    '>'   shift, and go to state 91
    ">="  shift, and go to state 92
    "<="  shift, and go to state 93
    '+'   shift, and go to state 94
    '-'   shift, and go to state 95
    '*'   shift, and go to state 96
    '/'   shift, and go to state 97
    ')'   shift, and go to state 114


State 83

   15 decl: TID '(' formals ')' '{' statementList '}' .

    $default  reduce using rule 15 (decl)


State 84

   17 statementList: statementList statement .

    $default  reduce using rule 17 (statementList)


State 85

   21 statement: type TID . ';'

    ';'  shift, and go to state 115


State 86

   49 expr: expr "||" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 116
    uop     go to state 69
    lvalue  go to state 78


State 87

   50 expr: expr "&&" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 117
    uop     go to state 69
    lvalue  go to state 78


State 88

   48 expr: expr "==" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 118
    uop     go to state 69
    lvalue  go to state 78


State 89

   47 expr: expr "!=" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 119
    uop     go to state 69
    lvalue  go to state 78


State 90

   44 expr: expr '<' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 120
    uop     go to state 69
    lvalue  go to state 78


State 91

   43 expr: expr '>' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 121
    uop     go to state 69
    lvalue  go to state 78


State 92

   46 expr: expr ">=" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 122
    uop     go to state 69
    lvalue  go to state 78


State 93

   45 expr: expr "<=" . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 123
    uop     go to state 69
    lvalue  go to state 78


State 94

   42 expr: expr '+' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 124
    uop     go to state 69
    lvalue  go to state 78


State 95

   41 expr: expr '-' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 125
    uop     go to state 69
    lvalue  go to state 78


State 96

   40 expr: expr '*' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 126
    uop     go to state 69
    lvalue  go to state 78


State 97

   39 expr: expr '/' . expr

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 127
    uop     go to state 69
    lvalue  go to state 78


State 98

   20 statement: expr ';' .

    $default  reduce using rule 20 (statement)


State 99

   39 expr: expr . '/' expr
   40     | expr . '*' expr
   41     | expr . '-' expr
   42     | expr . '+' expr
   43     | expr . '>' expr
   44     | expr . '<' expr
   45     | expr . "<=" expr
   46     | expr . ">=" expr
   47     | expr . "!=" expr
   48     | expr . "==" expr
   49     | expr . "||" expr
   50     | expr . "&&" expr
   51     | uop expr .

    $default  reduce using rule 51 (expr)


State 100

   22 statement: lvalue '=' . expr ';'

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 128
    uop     go to state 69
    lvalue  go to state 78


State 101

   65 lvalue: lvalue '[' . expr ']'

    NUMBER  shift, and go to state 51
    TRUE    shift, and go to state 52
    FALSE   shift, and go to state 53
    TID     shift, and go to state 76
    THIS    shift, and go to state 55
    TNEW    shift, and go to state 57
    '-'     shift, and go to state 60
    '!'     shift, and go to state 61
    '('     shift, and go to state 64

    expr    go to state 129
    uop     go to state 69
    lvalue  go to state 78


State 102

   66 lvalue: lvalue '.' . TID
   67       | lvalue '.' . TID '(' ')'
   68       | lvalue '.' . TID '(' actuals ')'

    TID  shift, and go to state 130


State 103

   12 decl: type TID '(' formals ')' '{' '}' .

    $default  reduce using rule 12 (decl)


State 104

   13 decl: type TID '(' formals ')' '{' statementList . '}'
   17 statementList: statementList . statement
